# aoba

./: Cargo.toml  MEMO.md
.sample/src/: schema.rs
aoba_macros/: Cargo.toml
aoba_macros/src/: internals.rs  lib.rs
aoba_macros/src/internals/genarete_orm/: mod.rs
aoba_orm/: Cargo.toml
aoba_orm/src/: lib.rs
aoba_orm/src/condition/: mod.rs  string.rs
aoba_orm/src/order/: mod.rs
aoba_schema/: Cargo.toml
aoba_schema/src/: lib.rs
aoba_schema/src/postgres/: mod.rs  parse.rs
derive/: Cargo.toml
examples/single_table/: Cargo.toml
examples/single_table/src/: main.rs
examples/single_table/src/schema/: mod.rs
macros/src/: internals.rs
macros/src/internals/genarete_orm/: mod.rs  schema.rs
src/: lib.rs
src/condition/: mod.rs  number.rs  string.rs
src/connection_pool/: mod.rs
src/db_types/: mod.rs  sqlx::postgres::types.doc.txt
src/entity/: mod.rs
src/experiment/: any.rs  aoba.rs  mod.rs  schema.rs  user.rs  x.rs
src/limit/: mod.rs
src/schema/: mod.rs
