[workspace]
members = [
    ".",
    "./aoba_orm",
    "./aoba_schema",
    "./aoba_macros",
    "examples/single_table",
]

[package]
name = "aoba"
version = "0.1.0"
edition = "2021"

[features]
default = []
# sqlx-asyncstd-postgres = []
# sqlx-asyncstd-mysql = []
# sqlx-tokio-postgres = []
# sqlx-tokio-mysql = []
# deadpool-asyncstd-postgres = []
# deadpool-tokio-postgres = []

[dependencies]
aoba_orm = { version = "0.1.0", path = "./aoba_orm" }
aoba_schema = { version = "0.1.0", path = "./aoba_schema" }
aoba_macros = { version = "0.1.0", path = "./aoba_macros" }
sqlx = { version = "0.6", default-features = false, features = ["runtime-async-std-native-tls", "postgres", "macros"] }
